--- a/VirtualDesktopAccessor/VirtualDesktopAccessor.vcxproj
+++ b/VirtualDesktopAccessor/VirtualDesktopAccessor.vcxproj
@@ -151,7 +151,7 @@
     <ClInclude Include="dllmain.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
-    <ClInclude Include="Win10Desktops.h" />
+    <ClInclude Include="VirtualDesktops.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
