--- a/VirtualDesktopAccessor/VirtualDesktopAccessor.vcxproj.filters
+++ b/VirtualDesktopAccessor/VirtualDesktopAccessor.vcxproj.filters
@@ -21,7 +21,7 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Win10Desktops.h">
+    <ClInclude Include="VirtualDesktops.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="dllmain.h">
